# LEDMatrixHUB75

./: 000-ar933x_uart_speed.patch  LICENSE
Documentation/: OpenWRT.md  STM32F4Discovery.md  Wiring.md
F4Matrix/: .cproject  .project  CMakeLists.txt
F4Matrix/src/: colorcorr.c  colorcorr.h  config.h  control_uart.c  control_uart.h  framebuffer.c  framebuffer.h  main.c  main.h  matrix.c  matrix.h  stm32f4xx_it.c  system_stm32f4xx.c  testimage.c  testimage.h
F4Matrix/startup_src/: startup_stm32f40xx.S  stm32_flash.ld
net2ledmatrix/: Makefile
net2ledmatrix/init/: net2ledmatrix.init
net2ledmatrix/src/: Makefile  artnet_helpers.c  artnet_helpers.h  hello.c  main.c  main_buffer.c
utils/: glediator_patch.py  matrix_param.py
